python/testData/inspections/PyUnresolvedReferencesInspection/OneUnsedOneMarked/a.py
from library import foo,<error descr="Cannot find reference 'bar' in 'library.py'">bar</error>


print(foo)